# gazebo-PR

./: .hg_archival.txt  CMakeLists.txt  HowtoBuild.md  README.md
edit_files/: CMakeLists_smartpal_gazebo_pkg.txt  Gazebo_dependencies_memo.md  Gazebo_dependencies_memo.txt  readme.txt
edit_files/gui/: Actions.hh  AdjustParameterDialog.cc  CMakeLists.txt  OculusWindow.hh  gui.hh
edit_files/rendering/: CMakeLists.txt  Camera.cc  MJPEGCapture.cpp  OculusCamera.cc  OculusCamera.hh  OculusCameraPrivate.hh  OculusCamera_temp.cc  OculusCamera_temp.hh  huffman_tables.h
edit_files/rendering/getocupos/: CMakeLists.txt  Makefile
edit_files/rendering/getocupos/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  setup_cached.sh
edit_files/rendering/getocupos/catkin_generated/stamps/oculuspositionplugin/: package.xml.stamp
edit_files/rendering/getocupos/devel/: .rosinstall  _setup_util.py
edit_files/rendering/getocupos/devel/share/oculus_plugin/cmake/: oculus_pluginConfig.cmake
edit_files/rendering/getocupos/include/: 　GetPostion.h
edit_files/rendering/getocupos/src/: getocupos.cpp
edit_files/rendering/skyx/: Makefile
gazebo/gui/: Actions.cc  AdjustParameterDialog.hh  MainWindow.cc  MainWindow.hh  OculusWindow.cc
gazebo/rendering/: CMakeLists.txt~  MJPEGCapture.h  Makefile  OculusCamera.cc  OculusCamera.hh  package.xml  rendering.hh
gazebo/rendering/deferred_shading/: Makefile
gazebo/rendering/getocupos/: CMakeLists.txt~
gazebo/rendering/getocupos/catkin_generated/: generate_cached_setup.py
gazebo/rendering/getocupos/catkin_generated/installspace/: _setup_util.py  oculus_plugin.pc  oculus_pluginConfig.cmake  oculuspositionplugin.pc  oculuspositionpluginConfig.cmake
gazebo/rendering/getocupos/devel/: setup.sh
gazebo/rendering/getocupos/devel/lib/pkgconfig/: oculus_plugin.pc
gazebo/rendering/getocupos/include/: OculusBar.h  getocupos.h
gazebo/rendering/selection_buffer/: Makefile
models/bsen_room/: model.config  model.sdf
models/ground_plane/: model.sdf
models/my_gripper/: simple_gripper.sdf
models/real_camera/: model.config  model.sdf  stereo_R.material
models/simple_bsen_room/: model.config  model.sdf
models/test/: model.config  model.sdf
models/transparent_bsen_room/: model.config  model.sdf
